--- a/OpenSBR/Signature/OpenSBR.Signature.csproj
+++ b/OpenSBR/Signature/OpenSBR.Signature.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard20</TargetFramework>
+	<LangVersion>8.0</LangVersion>
     <AssemblyName>OpenSBR.Signature</AssemblyName>
     <RootNamespace>OpenSBR.Signature</RootNamespace>
     <AssemblyVersion>1.0.0.0</AssemblyVersion>
