--- a/OpenSBR/Xades/OpenSBR.XAdES.csproj
+++ b/OpenSBR/Xades/OpenSBR.XAdES.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+	<LangVersion>8.0</LangVersion>
     <AssemblyName>OpenSBR.XAdES</AssemblyName>
     <RootNamespace>OpenSBR.XAdES</RootNamespace>
     <AssemblyVersion>1.2.0.0</AssemblyVersion>
